test_suite5/ALAN/test_suite/alan-2022-examples/failing/007670_mutation.alan
source Z begin while] do relax end end
